Oops, not allowed umlauts in file names!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <header>
             <div class="main-content">
                 <nav>
-                    <img class="logo" src="./images/brü.png" alt="bru logo"/>
+                    <img class="logo" src="./images/bru-logo.png" alt="bru logo"/>
                     <div class="nav-right">
                         <h3><a href="#order-area">PRE-ORDER</a></h3>
                         <a href="#"><img class="icon" src="./images/insta-icon.png" alt="Instagram Icon"/></a>
@@ -89,7 +89,7 @@
         <footer>
             <div id="footer-content" class="main-content">
                 <div id="footer-row-1">
-                    <img id="footer-logo" src="./images/brü.png" alt="bru logo">
+                    <img id="footer-logo" src="./images/bru-logo.png" alt="bru logo">
                     <div id="social">
                         <a href="#"><img class="icon" src="./images/insta-icon.png" alt="Instagram Icon"/></a>
                         <a href="#"><img class="icon" src="./images/twitter-icon.png" alt="Twitter Icon"/></a>
